src/test/deca/context/valid/objet/param_class_02.deca
// Description:
//   nested param in class
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    int x;
    int getX() {
        return x;
    }
    int setX(A a) {
        a.getX();
    }
}

{
    A a = new A();
    a.setX(a);
}