src/test/deca/context/invalid/objet/cast_type_invalid.deca
// Description:
//     Cast de classe avec de mauvais types.
//
// Resultats:
//    Error
//
// Historique:
//    cree le 01/01/2023

class B{

}

class A extends B{
    protected int x;
    int getA(){

    }
}

{
    B a = new B();
    (A) (a);
}